add_library(luisa-render-integrators INTERFACE)
luisa_render_add_plugin(normal CATEGORY integrator SOURCES normal.cpp)
luisa_render_add_plugin(megapath CATEGORY integrator SOURCES mega_path.cpp)
luisa_render_add_plugin(wavepath CATEGORY integrator SOURCES wave_path.cpp)
#luisa_render_add_plugin(wavepathopt CATEGORY integrator SOURCES wave_path_opt.cpp)
luisa_render_add_plugin(megaradiativediff CATEGORY integrator SOURCES mega_radiative_diff.cpp)
luisa_render_add_plugin(megareplaydiff CATEGORY integrator SOURCES mega_replay_diff.cpp)
