add_library(luisa-render-integrators INTERFACE)
luisa_render_add_plugin(normal CATEGORY integrator SOURCES normal.cpp)
luisa_render_add_plugin(megapath CATEGORY integrator SOURCES mega_path.cpp)
luisa_render_add_plugin(wavepath CATEGORY integrator SOURCES wave_path.cpp)
luisa_render_add_plugin(group CATEGORY integrator SOURCES group.cpp)
luisa_render_add_plugin(aov CATEGORY integrator SOURCES aov.cpp)
luisa_render_add_plugin(direct CATEGORY integrator SOURCES direct.cpp)
luisa_render_add_plugin(pssmlt CATEGORY integrator SOURCES pssmlt.cpp)
luisa_render_add_plugin(gradientpath CATEGORY integrator SOURCES gpt.cpp)
luisa_render_add_plugin(megapm CATEGORY integrator SOURCES megapm.cpp)
luisa_render_add_plugin(megavpt CATEGORY integrator SOURCES mega_vpt.cpp)
luisa_render_add_plugin(megavptnaive CATEGORY integrator SOURCES mega_vpt_naive.cpp)
