add_library(luisa-render-samplers INTERFACE)
luisa_render_add_plugin(independent CATEGORY sampler SOURCES independent.cpp)
luisa_render_add_plugin(paddedsobol CATEGORY sampler SOURCES padded_sobol.cpp)
luisa_render_add_plugin(sobol CATEGORY sampler SOURCES sobol.cpp)
luisa_render_add_plugin(zsobol CATEGORY sampler SOURCES zsobol.cpp)
luisa_render_add_plugin(pmj02bn CATEGORY sampler SOURCES pmj02bn.cpp)
luisa_render_add_plugin(tileshared CATEGORY sampler SOURCES tile_shared.cpp)
