add_library(luisa-render-shapes INTERFACE)
luisa_render_add_plugin(mesh CATEGORY shape SOURCES mesh.cpp)
luisa_render_add_plugin(instance CATEGORY shape SOURCES instance.cpp)
luisa_render_add_plugin(group CATEGORY shape SOURCES group.cpp)
luisa_render_add_plugin(virtual CATEGORY shape SOURCES virtual.cpp)
