add_library(luisa-render-shapes INTERFACE)
luisa_render_add_plugin(mesh CATEGORY shape SOURCES mesh.cpp)
luisa_render_add_plugin(instance CATEGORY shape SOURCES instance.cpp)
luisa_render_add_plugin(group CATEGORY shape SOURCES group.cpp)
luisa_render_add_plugin(inlinemesh CATEGORY shape SOURCES inline_mesh.cpp)
luisa_render_add_plugin(sphere CATEGORY shape SOURCES sphere.cpp)
