add_library(luisa-render-surfaces INTERFACE)
luisa_render_add_plugin(null CATEGORY surface SOURCES null.cpp)
luisa_render_add_plugin(lambert CATEGORY surface SOURCES lambert.cpp)
luisa_render_add_plugin(mirror CATEGORY surface SOURCES mirror.cpp)
luisa_render_add_plugin(disney CATEGORY surface SOURCES disney.cpp)
