luisa_render_add_application(test_buffer_io SOURCES test_buffer_io.cpp)
luisa_render_add_application(test_texture_io SOURCES test_texture_io.cpp)
luisa_render_add_application(test_blur SOURCES test_blur.cpp)
luisa_render_add_application(test_bitonic_sort SOURCES test_bitonic_sort.cpp)
luisa_render_add_application(test_bitonic_sort_optimized SOURCES test_bitonic_sort_optimized.cpp)
luisa_render_add_application(test_complete_permutation SOURCES test_complete_permutation.cpp)
luisa_render_add_application(test_complete_permutation_gpu SOURCES test_complete_permutation_gpu.cpp)

add_executable(test_complete_permutation_ours test_complete_permutation_ours.cpp)
target_compile_features(test_complete_permutation_ours PRIVATE cxx_std_17)
